force-app/main/default/objects/me3__c.object
<CustomObject>
    <fields>
        <fullName>A_Score__c</fullName>
        <label>Artistic (A) Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C_Score__c</fullName>
        <label>Conventional (C) Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Biodemo data of prospective student</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Career Development</relationshipLabel>
        <relationshipName>me3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>E_Score__c</fullName>
        <label>Enterprising (E) Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>I_Score__c</fullName>
        <label>Investigative (I) Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lead id lookup</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Career Development</relationshipLabel>
        <relationshipName>me3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>R_Score__c</fullName>
        <label>Realistic (R) Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_Score__c</fullName>
        <label>Social (S) Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>from where the me3 access was obtained</description>
        <label>Source</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Completed_Date__c</fullName>
        <description>when the RIASEC test was completed</description>
        <label>Test Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <description>Email address used as the User Id on the me3 website</description>
        <label>User Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>me3_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HS_STUDENT_BIO_DEMO.EMAIL_AGREE</description>
        <label>me3 Opt In</label>
        <type>Checkbox</type>
    </fields>
    <description>Me3 is an ASU developed web application that asks users to choose between 60 pairs of images, once complete me3 compiles a score based on those selection and suggests a set of careers.  The user can choose a career and a degree to go with that career.</description>
    <label>me3</label>
    <nameField>
        <label>me3 Account Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>me3</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Source__c</columns>
        <columns>Test_Completed_Date__c</columns>
        <columns>User_Id__c</columns>
        <columns>A_Score__c</columns>
        <columns>C_Score__c</columns>
        <columns>E_Score__c</columns>
        <columns>I_Score__c</columns>
        <columns>R_Score__c</columns>
        <columns>S_Score__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>Current_Student</fullName>
        <active>true</active>
        <description>me3 Data for existing students</description>
        <label>Current Student</label>
    </recordTypes>
    <recordTypes>
        <fullName>High_School</fullName>
        <active>true</active>
        <description>me3 data for High School students that are not affiliated with ASU</description>
        <label>High School</label>
    </recordTypes>
</CustomObject>