force-app/main/default/objects/me3__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Source__c</columns>
    <columns>Test_Completed_Date__c</columns>
    <columns>User_Id__c</columns>
    <columns>A_Score__c</columns>
    <columns>C_Score__c</columns>
    <columns>E_Score__c</columns>
    <columns>I_Score__c</columns>
    <columns>R_Score__c</columns>
    <columns>S_Score__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>